Check for missing group topic partitions after collecting all group offsets (#33)
* Check for missing group topic partitions after collecting all group offsets

* Misc README updates

* Setting experimental cgroup flags on JVM no longer required as of JDK 8u191

* Note about host networking mode when running in standalone