@@ -47,7 +47,7 @@ lazy val kafkaLagExporter =
         Cmd("RUN",            "chgrp -R 0 /opt && chmod -R g=u /opt"),
         Cmd("WORKDIR",        "/opt/docker"),
         Cmd("USER",           "1001"),
-        ExecCmd("CMD",        "/opt/docker/bin/kafka-lag-exporter", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap"),
+        ExecCmd("CMD",        "/opt/docker/bin/kafka-lag-exporter"),
       ),
       updateHelmChart := {
         import scala.sys.process._
